# ml-experiments

./: Makefile  README.md  pyproject.toml
classification_with_threshold/: train_linear_regression.ipynb  train_logistic_regression.ipynb  train_pcr.ipynb  train_xgboost_classifier.ipynb  train_xgboost_regressor.ipynb
gaia_agents/: pyproject.toml
gaia_agents/docs/: README.md
gaia_agents/src/agents/: langgraph_agent_v0.py  langgraph_agent_v1.py  langgraph_agent_v2.py  models.py  prompts.py  smolagents_agent.py  tools.py
gaia_agents/src/tools/: custom_tools.py  custom_wikipedia_tool.py
hf_audio_course/: Unit_2_hands_on_solution_example.ipynb  Unit_4_hands_on_exercise_solution.ipynb  Unit_5_hands_on_exercise_example.ipynb  Unit_5_hands_on_exercise_solution.ipynb  Unit_6_hands_on_exercise.ipynb  Unit_6_hands_on_exercise_solution.ipynb  Unit_7_hands_on_exercise.ipynb  Unit_7_hands_on_exercise_solution.ipynb
kaggle_semantle/: word_similarity_search.ipynb
mcqa_agents/: README.md  pyproject.toml
mcqa_agents/src/: evaluation.py  run.py
mcqa_agents/src/models/: base.py  baseline.py  cot.py  gemini.py  reasoning.py  retrieval_chroma.py  retrieval_rephrasing.py  retrieval_st.py
qualification_extraction/: nlp_classifier_finetunning.ipynb
