[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.6"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.13.4"
chess = "^1.11.2"
smolagents = "^1.17.0"
whisper = "^1.1.10"
openpyxl = "^3.1.5"
gradio = "^5.32.1"
ipykernel = "^6.29.5"
pillow = "^11.2.1"
langchain-community = "^0.3.24"
duckduckgo-search = "^8.0.2"
arxiv = "^2.2.0"
pytesseract = "^0.3.13"
tqdm = "^4.67.1"
iprogress = "^0.4"
huggingface-hub = "^0.32.4"
ipywidgets = "^8.1.7"
xmltodict = "^0.14.2"
semanticscholar = "^0.10.0"
langchain-experimental = "^0.3.4"
langgraph = "^0.4.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["notebooks/", "*.ipynb"]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E203", "E266", "E501"]
