[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
torch = "^2.7.1"
transformers = "^4.52.4"
sentence-transformers = "^4.1.0"
chromadb = "^1.0.13"
chroma = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[tool.ruff]
line-length = 120
target-version = "py312"

include = ["*.py", "*.pyi"]
exclude = [
  ".git", 
  ".hg", 
  ".mypy_cache", 
  ".tox", 
  ".venv", 
  ".env", 
  "vscode", 
  ".pytest_cache", 
  "build",
  "dist",
  "env", 
  "venv", 
  "*.egg-info", 
  "*.eggs",
  "protenix",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E203", "E266", "E501"]
